--- a/src/components/card-item/index.css
+++ b/src/components/card-item/index.css
@@ -14,4 +14,11 @@
   width: 400px;
   height: 500px;
   background: white;
+  overflow: scroll;
+}
+.mar {
+  margin: 10px;
+}
+.red {
+  color: red;
 }
